2008-04-09 Sancho Lerena <slerena@gmail.com>

        * reporting_viewer.php: Round data for monitor SLA report.

2008-04-01 Sancho Lerena <slerena@gmail.com>

	* pandoradb_data.sql: Updated default Pandora FMS logfile alert.

	* operation/agentes/estado_alertas.php: Button to create alert is not shown
	anymore. 

2008-03-19 Manuel Arostegui <marostegui@artica.es>

	* pandora_console.spec: Solved a problem with Suse based
	  distros regarding to dependencies and apache's path.

2008-03-16 Sancho Lerena <slerena@gmail.com>

	* reporting/reporting_viewer.php: Fixed bug that display combined graphs 
	with modules from previous graphs is more than one was displayed in a report.
	Thanks to TurricanII for reporting in openideas forums.

2008-03-14 Sancho Lerena <slerena@gmail.com>

	* reporting/fgraph.php: Removed stacked mode by default (could be enabled
	by editing code and uncomenting classic-overlapped mode). Thanks to TurricanII
	for reporting.

2008-03-07 Sancho Lerena <slerena@gmail.com>

	* operation/agentes/tactical.php, operation/servers/view_server.php: Final
	fix to problems in progress bar.

2008-03-01  Raul Mateos  <raulofpandora@gmail.com>

	* include/languages/language_*.php: Updated and cleared header.

2008-02-28 Sancho Lerena <slerena@gmail.com>

	* operation/agentes/tactical.php, operation/servers/view_server.php: Fixed
	stupid bug calculating progress percent due some modules missasigned to
	a network server because are Keepalive modules.

2008-02-28 Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/estado_monitores.php: Improved usability adding titles
	in images.

2008-02-26 Sancho Lerena <slerena@gmail.com>

	* pandoradb_data.sql, pandoradbdata_12_to_13.sql: Updated SQL for network 
	components and other minor issue.

2008-02-19  Raul Mateos  <raulofpandora@gmail.com>

	* operation/agentes/tactical.php: Solved small visual issue with rows.
	
	* include/languages/language_en.php: Changed CASE in menu texts.
